<resources>
    <string name="app_name">LeapRGB</string>
    <string name="beginbutton">BEGIN</string>
    <string name="arrowchoice">Arrow Buttons</string>
    <string name="gesturechoice">Swipe Gestures</string>
    <string name="sliderchoice">Slider</string>
    <string name="controlheader">Set Controls</string>
    <string name="manualtext">Manual Config</string>
    <string name="manualsave">SAVE</string>
    <string name="manualsaved">OPEN</string>
    <string name="helloworldcoordinates">
        1 1/1 4/1 10/1 12/2 1/2 4/2 10/2 12/3 1/3 4/3 6/3 7/3 8/3 10/3 12/3 14/3 15/3 16/4 1/4 2/4 3/4 4/4 6/4 8/4 10/4 12/4 14/4 16/5 1/5 4/5 6/5 7/5 8/5 10/5 12/5 14/5 16/6 1/6 4/6 6/6 10/6 12/6 14/6 16/7 1/7 4/7 6/7 7/7 8/7 10/7 12/7 14/7 15/7 16/9 1/9 3/9 12/9 16/10 1/10 3/10 12/10 16/11 1/11 3/11 12/11 16/12 1/12 3/12 5/12 6/12 7/12 9/12 10/12 12/12 14/12 15/12 16/13 1/13 3/13 5/13 7/13 9/13 12/13 14/13 16/14 1/14 2/14 3/14 5/14 7/14 9/14 12/14 14/14 16/15 1/15 3/15 5/15 6/15 7/15 9/15 12/15 14/15 15/15 16
    </string>
</resources>
