<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/pong_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pongcolor"
    tools:context=".pongClasses.PongActivity">

    <ImageView
        android:id="@+id/leftarrow"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="90dp"
        android:layout_marginBottom="75dp"
        android:onClick="onArrowKeyPressed"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/leftarrow" />

    <ImageView
        android:id="@+id/rightarrow"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="75dp"
        android:onClick="onArrowKeyPressed"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/rightarrow" />

    <TextView
        android:id="@+id/textViewPong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/controlheader"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPong">

        <RadioButton
            android:id="@+id/arrowChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/arrowchoice"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/sliderChoice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sliderchoice"
            android:textSize="20sp" />
    </RadioGroup>

    <Button
        android:id="@+id/beginPong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="30dp"
        android:background="@color/pongcolor2"
        android:onClick="beginPong"
        android:text="@string/beginbutton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <SeekBar
        android:id="@+id/slider"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="17dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="100dp"
        android:background="@color/sliderbg"
        android:max="11"
        android:paddingStart="25dp"
        android:paddingEnd="25dp"
        android:progress="5"
        android:progressBackgroundTint="@color/sliderbg"
        android:visibility="gone"
        android:progressTint="@color/sliderbg"
        android:thumb="@drawable/paddlealpha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="360dp"
        android:layout_height="360dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pongalpha" />
</androidx.constraintlayout.widget.ConstraintLayout>